--- a/public/global.css
+++ b/public/global.css
@@ -58,3 +58,13 @@ a:hover {
 	font-size: 1.125rem;
 	line-height: 1.75;
 }
+
+.header {
+	text-transform: uppercase;
+	color: var(--green);
+	margin-bottom: 1.5rem;
+}
+
+.header-lg {
+    margin-bottom: 1.75rem;
+}
