--- a/src/globals.css
+++ b/src/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .ps-heading {
+        @apply text-3xl text-white font-semibold;
+    }
+
+    .ps-subheading {
+        @apply text-sm text-green-300 font-bold uppercase pb-3 pt-3;
+    }
+}
