Add collaborators and team section

--- a/src/globals.css
+++ b/src/globals.css
@@ -11,6 +11,10 @@
         @apply text-sm text-green-300 font-bold uppercase pb-3 pt-3;
     }
 
+    .ps-subheading-sm {
+        @apply text-sm font-bold uppercase mb-4 text-white
+    }
+
     .ps-caption {
         @apply text-center text-xs text-gray-300 mt-4
     }
